[package]
name = "sds"
version = "0.1.0"
authors = ["Taiki Ono <taiki-ono@cookpad.com>"]

[dependencies]
chrono = "0.4"
futures = "0.1"
hyper = "0.12"
lazy_static = "1.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rusoto_core = "0.32.0"
rusoto_dynamodb = "0.32.0"
log = "0.4.0"
env_logger = "0.5.10"
uuid = { version = "0.7", features = ["serde", "v4"] }
