[package]
name = "sds"
version = "0.1.0"
authors = ["Taiki Ono <taiki-ono@cookpad.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
futures = "0.1"
hyper = "0.12"
tokio = "0.1"
tokio-executor = "0.1"
lazy_static = "1.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rusoto_dynamodb = "0.39"
log = "0.4.0"
env_logger = "0.6"
uuid = { version = "0.7", features = ["serde", "v4"] }
