[package]
name = "sds"
version = "0.1.0"
authors = ["Taiki Ono <taiki-ono@cookpad.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = "0.5"
chrono = "0.4"
futures = "0.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rusoto_dynamodb = "0.45"
log = "0.4.0"
env_logger = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
